# NSU_EVM_LABS

./: README.md
task1/: .gitignore  CMakeLists.txt  build.sh  o_build.sh  readme.txt  task1.docx
task1/src/: main.cpp
task2/: .gitignore  build.sh  notes.txt
task2/src/: CMakeLists.txt  main.c  mainO0.s  mainOfast.s  notes.txt
task3/: .gitignore  Pract3_Mustakaev_22204.docx
task3/src/lab5/: build.sh  capt_camera.cpp
task3/src/lab6/: build.sh  main.cpp
task4/: .gitignore  CMakeLists.txt  Pract4_Mustakaev.docx  build.sh  notes.txt
task4/src/: reverse_matrix1.cpp  reverse_matrix2.cpp  reverse_matrix3.cpp
task5/: .gitignore  build.sh  notes.txt
task5/graph/: graph.py
task5/src/: CMakeLists.txt  main.cpp  matrix.cpp  matrix.h
task6/: .gitignore  notes.txt
task6/graph/: graph.py
task6/src/: CMakeLists.txt  main.c
